--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to NEXELIS.IO</h1>
 
   <h2>
     This is the future enterprise logic app that will transform the process of coopertive production.
